Refactor display of route images

--- a/frontend/src/components/WallViewer.css
+++ b/frontend/src/components/WallViewer.css
@@ -1,9 +1,13 @@
-svg .u-area:hover {
+svg .u-area:hover:not(.disabled) {
   opacity: 40%;
 }
 
 svg .u-area.selected {
   opacity: 40%;
+}
+
+svg .u-area.selected.disabled {
+  fill: grey;
 }
 
 svg .u-border {
