3 add support for routes (#4)
* Add routes model, schemas and routes

* Add more routes to fixtures

* Create RouteCard and RouteList components

* Update list of routes in fixtures

* Update poetry lock and install pre-commit

* Modification du schema pour ne plus enregistrer la liste des routes directement sur les murs

* Add search box to route list

* Refactor wallviewer to use react rendering instead of d3

* manage filtering of route list with area

* Add route and wall views to frontend router. Make clicking on a route navigate to this routes view

* Add images to routes

* Add zoomable image for routes

* Refactor display of route images

* Remove unused routes from backend api

* Add License

* Resolve review comments

* Add logger and try/except around static route mount

--- a/frontend/src/components/WallViewer.css
+++ b/frontend/src/components/WallViewer.css
@@ -1,9 +1,14 @@
-svg .u-area.active {
-  opacity: 50%;
+svg .u-area:hover:not(.disabled) {
+  opacity: 40%;
+}
+
+svg .u-area.selected {
+  opacity: 40%;
 }
 
 svg .u-border {
   stroke: black;
   stroke-width: 2px;
-  opacity: 50%;
+  fill: none;
+  stroke-opacity: 50%;
 }
